@@ -1,3 +1,6 @@
+2018-05-31  Daniel Hawkins
+    * server/attack.c: Fix double application of resistance for life stealing attacktype.
+
 2018-05-28  Daniel Hawkins
     * common/living.c: Simplification of bracer/force/armor AC/WC code in fix_object:
       if we don't replace the best value, don't waste time subtracting and adding the same
